<resources>
    <string name="app_name">BikeTracker</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bike Tracker</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="tracker">Tracker</string>
    <string name="map">Map</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="fragment_map">Fragment Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="text_translation">Language</string>
    <string name="play_pause_button">play / pause button</string>
    <string name="todo">TODO</string>
    <string name="_0_0">0.0</string>
    <string name="climb">Climb</string>
    <string name="time">Time</string>
    <string name="average_speed">Average speed</string>
    <string name="calorie">Calorie</string>
    <string name="distanse">Distanse</string>
    <string name="speed">Speed</string>
    <string name="climb_value">0.0</string>
    <string name="calorie_value">0.0</string>
    <string name="time_value">Time</string>
    <string name="calories_value">0</string>
    <string name="distance_value">Distanse</string>
    <string name="distances_value">0.0</string>
    <string name="speeds_value">0.0</string>
    <string name="average_speeds_value">0.0</string>
    <string name="climbs_value">0</string>
    <string name="time_picture">time_picture</string>
    <string name="climb_picture">climb_picture</string>
    <string name="button_stop">Button stop</string>
    <string name="distance_picture">distance_picture</string>
    <string name="average_speed_picture">average_speed_picture</string>
    <string name="speed_picture">speed_picture</string>
    <string name="calorie_picture">calorie_picture</string>
    <string name="alert_message">"Do you want to finish your track?"</string>
    <string name="alert_message_no">"No"</string>
    <string name="alert_message_yes">"Yes"</string>
    <string name="alert_message_prolong">"You prolong your travel"</string>
    <string name="alert_message_finished">""You finished your track""</string>
    <string name="mode">Mode</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="lightText">Light</string>
    <string name="group1">Bike</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="male">Male</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="sex">Sex</string>
    <string name="sexMale">male</string>
    <string name="female">female</string>
    <string name="city_bicycle">City bicycle</string>
    <string name="road_bike">Bike</string>
    <string name="mountain_bike">Mountain Bike</string>
    <string name="bike">Bike</string>
    <string name="group2">Group2</string>
    <string name="group3">Group3</string>
    <string name="group4">Group4</string>
    <string name="group5">Group5</string>
    <string name="group6">Group6</string>
    <string name="toastCorectValue">Please, type a correct value!</string>
    <string name="alertTextWeight">Type your weight</string>
    <string name="alertTextName">Type your name</string>
    <string name="alertTextSex">Check your sex</string>
    <string name="alertTextBike">Check your bike</string>
    <string name="posBtnOk">OK</string>
    <string name="alertTextAge">Type your age</string>
    <string name="alertTextHeight">Type your height</string>
    <string name="enter_your_age_here">Enter your age here</string>
    <string name="enter_your_height_here">Enter your height here</string>
    <string name="enter_your_weight_here">Enter your weight here</string>
    <string name="enter_your_name_here">Enter your name here</string>
    <string name="light_text">Loading</string>


    <string-array name="group2">
        <item>item1</item>
        <item>item2</item>
        <item>item3</item>
    </string-array>

    <string-array name="group3">
        <item>item1</item>
        <item>item2</item>
        <item>item3</item>
    </string-array>

    <string-array name="group4">
        <item>item1</item>
        <item>item2</item>
        <item>item3</item>
    </string-array>

    <string-array name="group5">
        <item>item1</item>
        <item>item2</item>
        <item>item3</item>
    </string-array>

    <string-array name="group6">
        <item>item1</item>
        <item>item2</item>
        <item>item3</item>
    </string-array>

    <string-array name="group1">
        <item>Sport bike</item>
        <item>Mountain bike</item>
        <item>Road bike</item>
    </string-array>
    <string-array name="language_option">
        <item>English</item>
        <item>Indonesian</item>
        <item>Spanish</item>
    </string-array>
</resources>