<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_tracker">

    <fragment
        android:id="@+id/nav_tracker"
        android:name="com.example.biketracker.ui.tracker.TrackerFragment"
        android:label="@string/tracker"
        tools:layout="@layout/fragment_tracker" />

    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.biketracker.ui.map.MapFragment"
        android:label="@string/map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.example.biketracker.ui.history.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/nav_profil"
        android:name="com.example.biketracker.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.biketracker.ui.setting.SettingFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_setting" />
    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.biketracker.ui.share.ShareFragment"
        android:label="@string/share"
        tools:layout="@layout/fragment_share" />
</navigation>